--- a/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
+++ b/src/app/emailsdashboard/public-inquiries-charts/public-inquiries-charts.component.html
@@ -1,13 +1,23 @@
-<!-- <div class="row">
+<div dir="rtl" class="row">
     <div class="col">
         <google-chart #chart
-        [title]="title"
-        [type]="type"
-        [data]="data"
-        [columnNames]="columnNames"
-        [options]="options"
-        [width]="width"
-        [height]="height">
+        [title]="Linetitle"
+        [type]="Linetype"
+        [data]="Linedata"
+        [options]="Lineoptions"
+        [width]="Linewidth"
+        [height]="Lineheight">
      </google-chart>        
     </div>
-</div> -->
+    <div class="col">
+        <google-chart #chart
+        [title]="Pietitle"
+        [type]="Pietype"
+        [data]="Piedata"
+        [options]="Pieoptions"
+        [width]="Piewidth"
+        [height]="Pieheight">
+     </google-chart>        
+    </div>
+</div>
+
