--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -33,6 +33,15 @@ table {
 #list_of_types{
   display: inline-flex;
 }
+
 /* #table-overflow{
   overflow: auto;
 } */
+
+#EventBtnnew{
+  border-radius: 0px 20px 20px 0px;
+}
+
+#EventBtndisplay{
+  border-radius: 20px 0px 0px 20px;
+}
