--- a/src/app/emailsdashboard/emailsdashboard.component.html
+++ b/src/app/emailsdashboard/emailsdashboard.component.html
@@ -19,8 +19,8 @@
                                 <div class="col-6">
                                     <mat-form-field appearance="fill">
                                         <mat-label>מחלקה</mat-label>
-                                        <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
-                                            [matAutocomplete]="auto2">
+                                        <input type="text" aria-label="department" matInput
+                                            [formControl]="departmentfilter" [matAutocomplete]="auto2">
                                         <mat-autocomplete #auto2="matAutocomplete">
                                             <mat-option *ngFor="let dept of filteredOptions2 | async"
                                                 [value]="dept.value">
@@ -34,8 +34,9 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <mat-form-field appearance="fill">
-                                            <input matInput [max]="todaysDate" formControlName="compDateControl" (focus)="pickersearch1.open()"
-                                                [matDatepicker]="pickersearch1" placeholder="מתאריך:">
+                                            <input matInput [max]="todaysDate" formControlName="compDateControl"
+                                                (focus)="pickersearch1.open()" [matDatepicker]="pickersearch1"
+                                                placeholder="מתאריך:">
                                             <mat-datepicker-toggle matSuffix [for]="pickersearch1">
                                             </mat-datepicker-toggle>
                                             <mat-datepicker #pickersearch1></mat-datepicker>
@@ -45,8 +46,9 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <mat-form-field appearance="fill">
-                                            <input matInput formControlName="compDateControl2" (focus)="pickersearch2.open()"
-                                                [matDatepicker]="pickersearch2" placeholder="עד תאריך:">
+                                            <input matInput formControlName="compDateControl2"
+                                                (focus)="pickersearch2.open()" [matDatepicker]="pickersearch2"
+                                                placeholder="עד תאריך:">
                                             <mat-datepicker-toggle matSuffix [for]="pickersearch2">
                                             </mat-datepicker-toggle>
                                             <mat-datepicker #pickersearch2></mat-datepicker>
@@ -86,20 +88,20 @@
                             </div>
                             <div class="row float-left">
                                 <button mat-raised-button type="button" (click)="clearFields()"
-                                class="btn btn-primary btn-raised">
-                                <span class="material-icons">
-                                    clear
-                                </span>
-                            </button>
-                            &nbsp;&nbsp;&nbsp;
-                            <button mat-raised-button type="submit" (click)="searchForm('0')"
-                                class="btn btn-primary btn-raised">
-                                <span class="material-icons">
-                                    search
-                                </span>
-                            </button>
+                                    class="btn btn-primary btn-raised">
+                                    <span class="material-icons">
+                                        clear
+                                    </span>
+                                </button>
+                                &nbsp;&nbsp;&nbsp;
+                                <button mat-raised-button type="submit" (click)="searchForm('0')"
+                                    class="btn btn-primary btn-raised">
+                                    <span class="material-icons">
+                                        search
+                                    </span>
+                                </button>
                             </div>
-                            
+
                         </form>
                     </div>
                 </div>
@@ -140,7 +142,8 @@
                 <mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> נושא פניה
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompSubject}} </mat-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.CompSubject}}
+                </mat-cell>
             </ng-container>
 
             <!-- Weight Column -->
@@ -148,7 +151,8 @@
                 <mat-header-cell *matHeaderCellDef
                     style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך קבלת
                     פניה </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime}} </mat-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.EmailDateTime}}
+                </mat-cell>
             </ng-container>
 
             <!-- Update Column -->
@@ -177,8 +181,8 @@
             <!-- Update Column -->
             <ng-container matColumnDef="showAll">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> התכתבות עם מנהל
-                </mat-header-cell>
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> צירוף אחראי
+                    לפניה </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
                         color="primary" (click)="openDialogToStatusComplaint(element.EmailID)"><span
                             class="material-icons"><i matBadgeColor="warn" [matBadge]="element.NumberOfUnread"></i>
@@ -192,13 +196,14 @@
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;">
                     <mat-slide-toggle [checked]="element.Status" (change)="changeStatus($event,element.EmailID)"
-                        *ngIf="UserName == 'matias'"></mat-slide-toggle>
+                        *ngIf="UserName == 'matias'" matTooltip="פתיחת/סגירת פניה"></mat-slide-toggle>
                 </mat-cell>
             </ng-container>
 
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" id="toolTipStyle" matTooltip="{{row.ContentToShow}}" ></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row" id="toolTipStyle"
+                matTooltip="{{row.ContentToShow}}"></mat-row>
         </mat-table>
         <button (click)="openDialogToManageEmail(0,0)" type="button" id="rolesDetailsBtn" mat-fab color="primary"
             *ngIf="UserName == 'matias'" matTooltip="הוספת פנייה חדשה"><i class="material-icons">add</i></button>
