--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,10 +1,13 @@
 <form dir="rtl" class="form col" [formGroup]="ReportGroup">
     <div class="modal-header text-right">
         <div class="row mt-3">
-            <div class="col-6 text-center"><u>{{date2}}</u>
+            <div class="col-4 text-center">{{date2}}
+            </div>
+            <div class="col-4 text-center" style="font-size: xx-large;">
+                {{firstName}} {{lastName}}
             </div>
             <div class="col-4 text-center">
-                <u>{{time2}}</u>
+                {{time2}}
             </div>
         </div>
         <!-- <h4 class="modal-title text-center">דווח</h4> -->
@@ -22,11 +25,11 @@
                     </mat-form-field>
                 </div>
             </div> -->
-            
+
             <div class="col">
                 <div class="form-group">
                     <mat-form-field>
-                        <mat-label>מחלקה</mat-label>
+                        <mat-label>נושא/מחלקה</mat-label>
                         <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
                             [matAutocomplete]="auto2">
                         <mat-autocomplete #auto2="matAutocomplete">
