--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -2,27 +2,30 @@
     <span aria-hidden="true">&times;</span>
 </button>
 <div dir="rtl" class="row reportHeader" *ngIf="asDialog">
-    <h2>{{Dept_Name}}</h2> &nbsp;&nbsp;&nbsp;&nbsp;<h2><b>{{firstname}} {{lastname}}</b></h2>
+    <h2>{{Dept_Name}}</h2>
+</div>
+<div dir="rtl" class="row reportHeader" *ngIf="asDialog">
+    <h2><b>{{firstname}} {{lastname}}</b></h2>
 </div>
 
 <div id="page-toshow" class="padding-top-0">
     <h1 class="page-title text-center">מערכת דיווח אחיות</h1>
     <div class="container-fluid trans-80">
-        <div class="row">
+        <div class="row search-cont">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
                     <div dir="rtl" class="card-body">
                         <form class="form" [formGroup]="searchReportsGroup">
                             <div class="row">
-                                <div class="col-12">
+                                <!-- <div class="col-12">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput autocomplete="off" placeholder="מספר מקרה"
                                                 formControlName="CaseNumber" />
                                         </mat-form-field>
                                     </div>
-                                </div>
-                                <div class="col">
+                                </div> -->
+                                <div class="col-6">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>משמרת</mat-label>
@@ -35,7 +38,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <!-- <div class="col-4">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>מחלקה</mat-label>
@@ -49,8 +52,8 @@
                                             </mat-autocomplete>
                                         </mat-form-field>
                                     </div>
-                                </div>
-                                <div class="col">
+                                </div> -->
+                                <div class="col-6">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
                                             <mat-label>קטגוריה</mat-label>
@@ -64,23 +67,10 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col">
-                                    <div class="form-group lh-37">
-                                        <mat-form-field>
-                                            <mat-label>סטטוס</mat-label>
-                                            <mat-select formControlName="ReportStatus">
-                                                <mat-option [value]="''">הכל</mat-option>
-                                                <mat-option *ngFor="let st of status" [value]="st.value"
-                                                    [style.color]="st.value == 'טופל' ? 'darkseagreen':  'darkgrey'">
-                                                    {{st.viewValue}}
-                                                </mat-option>
-                                            </mat-select>
-                                        </mat-form-field>
-                                    </div>
-                                </div>
+
                             </div>
                             <div class="row">
-                                <div class="col">
+                                <div class="col-4">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput formControlName="ReportStartDate" (focus)="startdate.open()"
@@ -91,7 +81,7 @@
                                         </mat-form-field>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-4">
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput formControlName="ReportEndDate" (focus)="enddate.open()"
@@ -99,6 +89,20 @@
                                                 [matDatepicker]="enddate" />
                                             <mat-datepicker-toggle matSuffix [for]="enddate"></mat-datepicker-toggle>
                                             <mat-datepicker #enddate></mat-datepicker>
+                                        </mat-form-field>
+                                    </div>
+                                </div>
+                                <div class="col-4">
+                                    <div class="form-group lh-37">
+                                        <mat-form-field>
+                                            <mat-label>סטטוס</mat-label>
+                                            <mat-select formControlName="ReportStatus">
+                                                <mat-option [value]="''">הכל</mat-option>
+                                                <mat-option *ngFor="let st of status" [value]="st.value"
+                                                    [style.color]="st.value == 'טופל' ? 'darkseagreen':  'darkgrey'">
+                                                    {{st.viewValue}}
+                                                </mat-option>
+                                            </mat-select>
                                         </mat-form-field>
                                     </div>
                                 </div>
@@ -121,6 +125,12 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="row adminClinicBtns">
+            <button mat-raised-button type="button" class="btn btn-primary btn-raised" id="administrativeBtn">מנהלי
+            </button>
+            <button mat-raised-button type="button" class="btn btn-primary btn-raised" id="clinicalBtn">קליני
+            </button>
+        </div> -->
     </div>
     <hr />
 
@@ -159,15 +169,24 @@
                         </span></button>
                 </td>
             </ng-container>
+            
+            <ng-container matColumnDef="continue">
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> המשך דווח </th>
+                <td mat-cell *matCellDef="let element"> <button matTooltip="המשך דווח"
+                        style="border-radius: 18px 0px 18px 0px;" mat-raised-button color="primary"><span class="material-icons">
+                            play
+                        </span></button>
+                </td>
+            </ng-container>
 
             <ng-container matColumnDef="reply">
-                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> הוסף תגובה לדווח </th>
+                <th mat-header-cell *matHeaderCellDef style="text-align: center;"> תגובה לטיפול </th>
                 <td mat-cell *matCellDef="let element"> <button matTooltip="התכתבות"
                         style="border-radius: 18px 0px 18px 0px;" mat-raised-button color="primary"
                         (click)="addReply(element.reportID)"><span class="material-icons">
                             reply
                         </span></button>
-                    <button matTooltip="טופל"
+                    <button matTooltip="סמן כטופל"
                         style="background: darkseagreen;margin-right: 5px;border-radius: 0px 18px 0px 18px;"
                         mat-raised-button color="primary" [disabled]="element.status == 'טופל'"
                         (click)="changeReportToHandled(element.reportID)">
@@ -179,10 +198,9 @@
 
             <ng-container matColumnDef="expandedDetail">
                 <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-                    <div class="example-element-detail"
-                        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="example-element-detail" style="border-style: outset;">
                         <div class="col-3">
-                            <div class="example-element-diagram mr-5" style="font-size: inherit;">
+                            <div class="example-element-diagram mr-5">
                                 <div class="example-element-position"> תאריך עדכון אחרון - {{element.updateDate}}</div>
                                 <div class="example-element-symbol"> משמרת - {{element.shift}} </div>
                                 <!-- <div class="example-element-weight"> עדיפות - <strong
@@ -193,7 +211,7 @@
 
                         <div class="col-9">
                             <div class="example-element-description">
-                                <span class="example-element-description-attribution"> תוכן הדווח -- </span>
+                                <span class="example-element-description-attribution"></span>
                                 {{element.description}}
                             </div>
                         </div>
@@ -204,17 +222,14 @@
 
             <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
             <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
-                [class.example-expanded-row]="expandedElement === element"
-                (click)="expandedElement = expandedElement === element ? null : element"
                 [style.background]="element.status == 'טופל' ? 'darkseagreen': 'gainsboro'">
             </tr>
             <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
         </table>
         <button matTooltip="דווח חדש" type="button" id="EventBtn" mat-fab color="primary"
-            (click)="fillReportDialog(0,'','','')" *ngIf="permission">
+            (click)="fillReportDialog(0,'','','')" *ngIf="permission && !asDialog">
             <i class="material-icons">add</i>
         </button>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
 <div class="d-none-desktop">
