--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -18,7 +18,7 @@
       </ng-container> -->
       <ng-container matColumnDef="receipts">
         <th mat-header-cell *matHeaderCellDef> קבלות </th>
-        <td mat-cell *matCellDef="let element"> {{element.RecieptCount}} </td>
+        <td mat-cell *matCellDef="let element"> <span matTooltip="בוקר: {{element.RecieptMorning}} , ערב: {{element.RecieptEvening}} , לילה: {{element.RecieptNight}}">{{element.RecieptCount}}</span>  </td>
       </ng-container>
       <ng-container matColumnDef="released">
         <th mat-header-cell *matHeaderCellDef> שחרורים </th>
@@ -86,7 +86,11 @@
     </table>
     <div class="row p-3">
       <div class="col">
-        <button matTooltip="דווח עבור מחלקת {{Dept_Name}}" type="button" id="EventBtn" mat-fab color="primary"
+        <button matTooltip="הצגת דוחות מינהליים" type="button" id="EventBtndisplay" mat-fab color="primary"
+          (click)="displayReports('',true,Dept_Name,'','')">
+          <i class="material-icons">zoom_out_map</i>
+        </button>
+        <button matTooltip="דווח מינהלי חדש" type="button" id="EventBtnnew" mat-fab color="primary"
           (click)="fillReportDialog(0,Dept_Name,'','','')">
           <i class="material-icons">assignment</i>
         </button>
@@ -112,7 +116,6 @@
 
     </div>
     <mat-progress-bar mode="buffer" *ngIf="Patientsloading"></mat-progress-bar>
-    <h4 *ngIf="patientsTable">רשימת מטופלים במחלקת: <b>{{Dept_Name}}</b></h4>
     <div dir="rtl">
       <mat-form-field appearance="standard" *ngIf="patientsTable">
         <mat-label>סינון</mat-label>
@@ -146,7 +149,7 @@
           הגבלה פיזית
       </button></mat-list-item>
         <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'קורונה')" mat-raised-button color="primary">
+          (click)="applyFilter($event,'מאומת')" mat-raised-button color="primary">
           סטטוס קורונה
       </button></mat-list-item>
       </mat-list>
@@ -169,6 +172,11 @@
         <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_DEPART}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="lastname">
+        <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
+        <td mat-cell *matCellDef="let element"> {{element.PM_LAST_NAME}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="firstname">
         <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
         <td mat-cell *matCellDef="let element"> {{element.PM_FIRST_NAME}} </td>
@@ -177,11 +185,6 @@
       <ng-container matColumnDef="dadname">
         <th mat-header-cell *matHeaderCellDef> שם אבא </th>
         <td mat-cell *matCellDef="let element"> {{element.PM_FATHER_NAME}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="lastname">
-        <th mat-header-cell *matHeaderCellDef> שם משפחה </th>
-        <td mat-cell *matCellDef="let element"> {{element.PM_LAST_NAME}} </td>
       </ng-container>
 
       <ng-container matColumnDef="age">
@@ -211,7 +214,7 @@
 
       <ng-container matColumnDef="reportpatint">
         <th mat-header-cell *matHeaderCellDef> דיווח</th>
-        <td mat-cell *matCellDef="let element"> <button matTooltip="דווח עבוד מטופל" type="button" id="EventBtn2"
+        <td mat-cell *matCellDef="let element"> <button matTooltip="דווח קליני למטופל" type="button" id="EventBtn2"
             mat-mini-fab color="primary"
             (click)="fillReportDialog(0,Dept_Name,element.PM_FIRST_NAME,element.PM_LAST_NAME,element.PM_CASE_NUMBER)">
             <span class="material-icons">
@@ -234,7 +237,7 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns2;" matTooltip="{{row.SSP_DESCRIPTION}}"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns2;" matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip" matTooltipPosition="before"></tr>
 
     </table>
 
