--- a/src/app/nurses-department-manage/nurses-department-manage.component.html
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.html
@@ -18,7 +18,9 @@
       </ng-container> -->
       <ng-container matColumnDef="receipts">
         <th mat-header-cell *matHeaderCellDef> קבלות </th>
-        <td mat-cell *matCellDef="let element"> <span matTooltip="בוקר: {{element.RecieptMorning}} , ערב: {{element.RecieptEvening}} , לילה: {{element.RecieptNight}}">{{element.RecieptCount}}</span>  </td>
+        <td mat-cell *matCellDef="let element"> <span
+            matTooltip="לילה: {{element.RecieptNight}} ,בוקר: {{element.RecieptMorning}}, ערב: {{element.RecieptEvening}}">{{element.RecieptCount}}</span>
+        </td>
       </ng-container>
       <ng-container matColumnDef="released">
         <th mat-header-cell *matHeaderCellDef> שחרורים </th>
@@ -86,26 +88,26 @@
     </table>
     <div class="row p-3">
       <div class="col">
-        <button matTooltip="הצגת דוחות מינהליים" type="button" id="EventBtndisplay" mat-fab color="primary"
-          (click)="displayReports('',true,Dept_Name,'','')">
-          <i class="material-icons">zoom_out_map</i>
+        <button matTooltip="דווח מינהלי" type="button" id="EventBtndisplay" mat-fab color="primary"
+          (click)="displayReports('',true,Dept_Name,'','','','','administrative')">
+          <i class="material-icons">edit</i>
         </button>
-        <button matTooltip="דווח מינהלי חדש" type="button" id="EventBtnnew" mat-fab color="primary"
+        <!-- <button matTooltip="דווח מינהלי חדש" type="button" id="EventBtnnew" mat-fab color="primary"
           (click)="fillReportDialog(0,Dept_Name,'','','')">
           <i class="material-icons">assignment</i>
-        </button>
+        </button> -->
       </div>
       <div class="col">
         <button type="button" id="details-btn" *ngIf="Dept_Name == 'פנימית א'"
           (click)="getPatientsPerDepart($event,'רנורול')" mat-raised-button color="primary">
           נוירולוגיה
-      </button>
+        </button>
       </div>
       <div class="col">
         <button type="button" id="details-btn" *ngIf="Dept_Name == 'פנימית א'"
           (click)="getPatientsPerDepart($event,'רשבצ-מ')" mat-raised-button color="primary">
           שבץ מוחי
-      </button>
+        </button>
       </div>
       <div class="col">
         <button matTooltip="מטופלים במחלקת {{Dept_Name}}" type="button" id="EventBtn2" mat-fab color="primary"
@@ -123,36 +125,41 @@
       </mat-form-field>
     </div>
     <div dir="rtl" class="mb-3" *ngIf="patientsTable">
-      <mat-list  role="list" id="list_of_types">
+      <mat-list role="list" id="list_of_types">
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'')"
+            mat-raised-button color="primary">
+            הכל
+          </button></mat-list-item>
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'מונשם')"
+            mat-raised-button color="primary">
+            מונשמים
+          </button></mat-list-item>
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'צנתר שתן')"
+            mat-raised-button color="primary">
+            צנתר שתן
+          </button></mat-list-item>
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'צנתר מרכזי')"
+            mat-raised-button color="primary">
+            צנתר מרכזי
+          </button></mat-list-item>
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'בידוד')"
+            mat-raised-button color="primary">
+            בידוד
+          </button></mat-list-item>
         <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'')" mat-raised-button color="primary">
-          הכל
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'מונשם')" mat-raised-button color="primary">
-          מונשמים
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'צנתר שתן')" mat-raised-button color="primary">
-          צנתר שתן
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'צנתר מרכזי')" mat-raised-button color="primary">
-          צנתר מרכזי
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'בידוד')" mat-raised-button color="primary">
-          בידוד
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'הגבלה פיזית')" mat-raised-button color="primary">
-          הגבלה פיזית
-      </button></mat-list-item>
-        <mat-list-item role="listitem"><button type="button" id="details-btn"
-          (click)="applyFilter($event,'מאומת')" mat-raised-button color="primary">
-          סטטוס קורונה
-      </button></mat-list-item>
+            (click)="applyFilter($event,'הגבלה פיזית')" mat-raised-button color="primary">
+            הגבלה פיזית
+          </button></mat-list-item>
+        <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'מאומת')"
+            mat-raised-button color="primary">
+            סטטוס קורונה
+          </button></mat-list-item>
+        <!-- <mat-list-item role="listitem"></mat-list-item> -->
       </mat-list>
+      <button matTooltip="דווח קליני למחלקה" type="button" id="generalClinicalBtn" mat-fab color="primary"
+        (click)="displayReports('', '', Dept_Name, '', '','','','clinical')">
+        <i class="material-icons">edit</i>
+      </button>
     </div>
 
     <table dir="rtl" mat-table [dataSource]="dataSource2" class="mat-elevation-z8" *ngIf="patientsTable">
@@ -212,7 +219,7 @@
         <td mat-cell *matCellDef="let element"> {{element.PM_MOVE_TIME }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="reportpatint">
+      <!-- <ng-container matColumnDef="reportpatint">
         <th mat-header-cell *matHeaderCellDef> דיווח</th>
         <td mat-cell *matCellDef="let element"> <button matTooltip="דווח קליני למטופל" type="button" id="EventBtn2"
             mat-mini-fab color="primary"
@@ -221,13 +228,13 @@
               assignment
             </span>
           </button> </td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="displayreports">
-        <th mat-header-cell *matHeaderCellDef> הצג דוחות</th>
-        <td mat-cell *matCellDef="let element"> <button matTooltip="הצג את הדווחים" type="button" id="EventBtn2"
-            mat-mini-fab color="primary"
-            (click)="displayReports(element.PM_CASE_NUMBER,true,Dept_Name,element.PM_FIRST_NAME,element.PM_LAST_NAME)">
+        <th mat-header-cell *matHeaderCellDef> דוחות קליניים</th>
+        <td mat-cell *matCellDef="let element"> <button matTooltip="דוחות למטופל" type="button" mat-mini-fab
+            color="primary"
+            (click)="displayReports(element.PM_CASE_NUMBER,true,Dept_Name,element.PM_FIRST_NAME,element.PM_LAST_NAME,element.PM_PATIENT_GENDER,element.PM_DOB,'clinical')">
             <span class="material-icons">
               <span class="material-icons">
                 menu_open
@@ -237,7 +244,9 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns2;" matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip" matTooltipPosition="before"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns2;"
+        matTooltip="{{row.SSP_DESCRIPTION}}&#13;{{row.CoronaStatus}}" matTooltipClass="my-tooltip"
+        matTooltipPosition="before"></tr>
 
     </table>
 
