--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -14,6 +14,12 @@
       }
   }
 
+  #dashLine{
+    margin-bottom: 0px;
+    border: 2px solid black;
+    margin-top: 2rem;
+  }
+
   table {
     width: 100%;
   }
@@ -35,6 +41,11 @@
   .col-4{
     border-right: 3px solid;
     border-left: 3px solid;
+  }
+
+  .coronaNumber{
+    float: right;
+    font-size: 15px;
   }
 
   .material-icons:hover{
