--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -1,9 +1,9 @@
 <mat-progress-bar mode="indeterminate" *ngIf="!progressBarNumbers"></mat-progress-bar>
 <button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
-  </button>
+</button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><b>חדר לידה </b>  {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4><b>חדר לידה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="regular">
@@ -101,7 +101,7 @@
 </form>
 
 <form class="form" *ngIf="surgery">
-    <h4><b>חדר ניתוח </b>  {{myDate}}</h4>
+    <h4><b>חדר ניתוח </b> {{myDate}}</h4>
     <table dir="rtl" [dataSource]="dataSource4" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="inprogress">
@@ -169,13 +169,15 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay2_2"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay2_2;" [style.background]="row.SurgeryStatus == 'בהמתנה' ? 'antiquewhite' : row.SurgeryStatus == 'פעיל' ? 'aquamarine' : 'darkgray'"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay2_2;"
+            [style.background]="row.SurgeryStatus == 'בהמתנה' ? 'antiquewhite' : row.SurgeryStatus == 'פעיל' ? 'aquamarine' : 'darkgray'">
+        </tr>
 
     </table>
 </form>
 
 <form class="form" *ngIf="ICU">
-    <h4><b>מחלקה לרפואה דחופה </b>  {{myDate}}</h4>
+    <h4><b>מחלקה לרפואה דחופה </b> {{myDate}}</h4>
     <table dir="rtl" [dataSource]="dataSource5" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="adult">
@@ -224,14 +226,16 @@
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay3"></tr>
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay3;"></tr>
     </table>
-    
+
     <hr>
     <h4 *ngIf="ICUDetails">רשימת מטופלים<b>
         </b></h4>
-    <mat-form-field *ngIf="ICUDetails" class="float-right text-right" appearance="standard">
-        <mat-label>מסנן</mat-label>
-        <input matInput (keyup)="applyFilter3($event)" #input>
-    </mat-form-field>
+    <div dir="rtl">
+        <mat-form-field appearance="standard" *ngIf="ICUDetails">
+            <mat-label>סינון</mat-label>
+            <input matInput (keyup)="applyFilter3($event)" placeholder="הקלד..." #input>
+        </mat-form-field>
+    </div>
     <table dir="rtl" *ngIf="ICUDetails" mat-table [dataSource]="dataSource5_2" class="mat-elevation-z8"
         style="width: 100%;">
 
@@ -240,9 +244,9 @@
             <td mat-cell *matCellDef="let element"> {{element.CaseNumber}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="patientfirstname">
-            <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
+        <ng-container matColumnDef="departmed">
+            <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
+            <td mat-cell *matCellDef="let element"> {{element.departMed}} </td>
         </ng-container>
 
         <ng-container matColumnDef="patientlastname">
@@ -250,22 +254,26 @@
             <td mat-cell *matCellDef="let element"> {{element.PatientLastName}} </td>
         </ng-container>
 
-        <!-- <ng-container matColumnDef="departnur">
-            <th mat-header-cell *matHeaderCellDef> מחלקה סיעודית</th>
-            <td mat-cell *matCellDef="let element"> {{element.departNur}} </td>
-        </ng-container> -->
-
-        <ng-container matColumnDef="departmed">
-            <th mat-header-cell *matHeaderCellDef> מחלקה רפואית </th>
-            <td mat-cell *matCellDef="let element"> {{element.departMed}} </td>
+        <ng-container matColumnDef="patientfirstname">
+            <th mat-header-cell *matHeaderCellDef> שם פרטי </th>
+            <td mat-cell *matCellDef="let element"> {{element.PatientFirstName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="dadname">
+            <th mat-header-cell *matHeaderCellDef> שם אבא </th>
+            <td mat-cell *matCellDef="let element"> {{element.PatientFatherName}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="patientid">
-            <th mat-header-cell *matHeaderCellDef> תעודת זהות </th>
-            <td mat-cell *matCellDef="let element"> {{element.PatientId}} </td>
+        <ng-container matColumnDef="age">
+            <th mat-header-cell *matHeaderCellDef> גיל </th>
+            <td mat-cell *matCellDef="let element"> {{element.H_DOB}} </td>
         </ng-container>
 
-        <!-- <ng-container matColumnDef="datein">
+        <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef> מגדר </th>
+            <td mat-cell *matCellDef="let element"> {{element.PatientGender}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="datein">
             <th mat-header-cell *matHeaderCellDef> תאריך הגעה </th>
             <td mat-cell *matCellDef="let element"> {{element.DateIn}} </td>
         </ng-container>
@@ -273,15 +281,16 @@
         <ng-container matColumnDef="timein">
             <th mat-header-cell *matHeaderCellDef> זמן הגעה </th>
             <td mat-cell *matCellDef="let element"> {{element.TimeIn}} </td>
-        </ng-container> -->
-
-        <ng-container matColumnDef="active">
-            <th mat-header-cell *matHeaderCellDef> סטטוס </th>
-            <td mat-cell *matCellDef="let element"> {{element.Active}} </td>
         </ng-container>
 
+        <!-- <ng-container matColumnDef="active">
+            <th mat-header-cell *matHeaderCellDef> סטטוס </th>
+            <td mat-cell *matCellDef="let element"><span *ngIf="element.Active == '1'">נמצא</span><span *ngIf="element.Active == '0'">שוחרר</span>  </td>
+        </ng-container> -->
+
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay3_2"></tr>
-        <tr mat-row *matRowDef="let row; columns: columnsToDisplay3_2;" [style.background]="row.Active == '1' ? 'aquamarine': 'darkgray'"></tr>
+        <tr mat-row *matRowDef="let row; columns: columnsToDisplay3_2;"
+            [style.background]="row.Active == '1' ? 'aquamarine': 'darkgray'"></tr>
 
     </table>
 </form>
