--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -152,7 +152,7 @@
                         <div class="list-style text-center" style="font-size: 18px;"><span class="coronaNumber"
                                 [ngStyle]="{'color':item.CoronaNumber !== '0' ? 'red' : 'green'}">חולי קורונה:
                                 {{item.CoronaNumber}}</span> סה"כ: {{item.OccupancyPerDepart}} -
-                            תפוסה: %{{item.PercentOccupancy}}
+                            תפוסה: {{item.PercentOccupancy}}%
                         </div>
                         <!-- <div class="list-style text-center" style="font-size: 24px;"> 
                         </div> -->
