--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -231,6 +231,9 @@
                             <li class="nav-item" *ngIf="_shoCoronavaccine">
                                 <a class="nav-link" routerLink="sarscov2">נוגדנים לקורונה</a>
                             </li>
+                            <li>
+                                <a class="nav-link" routerLink="fastcovid19test" *ngIf="fastCovidTestPermission">בדיקות נוגדנים מהירות</a>
+                            </li>
 
                             <li class="nav-item" *ngIf="_shoCoronavaccine">
                                 <a class="nav-link" routerLink="coronavaccine">חיסון לקורונה</a>
