--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.css
@@ -17,7 +17,7 @@
   #dashLine{
     margin-bottom: 0px;
     border: 2px solid black;
-    margin-top: 2rem;
+    margin-top: 2px;
   }
 
   table {
