--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -3,7 +3,7 @@
     <span aria-hidden="true">&times;</span>
 </button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><b>חדר לידה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4><b style="margin-left: 120px;">חדר לידה </b> <span>{{myDate | date: "dd.MM.yyyy"}}</span></h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="regular">
@@ -101,7 +101,7 @@
 </form>
 
 <form class="form" *ngIf="surgery">
-    <h4><b>חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4><b style="margin-left: 120px;">חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource4" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="inprogress">
@@ -177,50 +177,76 @@
 </form>
 
 <form class="form" *ngIf="ICU">
-    <h4><b>מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource5" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="adult">
             <th mat-header-cell *matHeaderCellDef> מבוגרים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('ADULTS')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('ADULTS','0')"
+                    matTooltip="מטופלים במצטבר" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.ADULTS}}
-                </button></td>
+                </button>
+                <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('ADULTS','1')"  matTooltip="מטופלים כעת" [disabled]
+                    mat-raised-button>
+                    10
+                </button>
+            </td>
         </ng-container>
         <ng-container matColumnDef="child">
             <th mat-header-cell *matHeaderCellDef> ילדים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('CHILDREN')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button"
+                    (click)="getOtherDepartmentPatients('CHILDREN','0')" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
                     {{element.CHILDREN}}
-                </button> </td>
+                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('CHILDREN','1')"  matTooltip="מטופלים כעת"
+                    [disabled] mat-raised-button>
+                    10
+                </button></td>
         </ng-container>
         <ng-container matColumnDef="women">
             <th mat-header-cell *matHeaderCellDef> נשים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('WOMEN')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('WOMEN','0')"
+                    mat-raised-button matTooltip="מטופלים במצטבר"
+                    style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.WOMEN}}
-                </button> </td>
+                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('WOMEN','1')"  matTooltip="מטופלים כעת"
+                    [disabled] mat-raised-button>
+                    10
+                </button></td>
         </ng-container>
         <ng-container matColumnDef="lyingdown">
             <th mat-header-cell *matHeaderCellDef> שוכבים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('SHOKHVVEM')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
+                    (click)="getOtherDepartmentPatients('SHOKHVVEM','0')" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.SHOKHVVEM}}
-                </button> </td>
+                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('SHOKHVVEM','1')"  matTooltip="מטופלים כעת"
+                    [disabled] mat-raised-button>
+                    10
+                </button></td>
         </ng-container>
         <ng-container matColumnDef="standing">
             <th mat-header-cell *matHeaderCellDef> מהלכים </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('MEHALKHEM')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
+                    (click)="getOtherDepartmentPatients('MEHALKHEM','0')" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.MEHALKHEM}}
-                </button> </td>
+                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('MEHALKHEM','1')"  matTooltip="מטופלים כעת"
+                    [disabled] mat-raised-button>
+                    10
+                </button></td>
         </ng-container>
         <ng-container matColumnDef="shockroom">
             <th mat-header-cell *matHeaderCellDef> חדר הלם </th>
-            <td mat-cell *matCellDef="let element"><button type="button" id="details-btn"
-                    (click)="getOtherDepartmentPatients('HELEM')" mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let element"><button type="button" (click)="getOtherDepartmentPatients('HELEM','0')"
+                    matTooltip="מטופלים במצטבר" mat-raised-button
+                    style="background-image: linear-gradient(grey, aquamarine);">
                     {{element.HELEM}}
-                </button> </td>
+                </button> <button type="button" style="background-color: aquamarine;" (click)="getOtherDepartmentPatients('HELEM','1')" matTooltip="מטופלים כעת"
+                    [disabled] mat-raised-button>
+                    10
+                </button></td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay3"></tr>
